# ocrd_olahd_client

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements.txt  setup.py
ocrd_olahd_client/: cli.py  client.py  ocrd-tool.json  processor.py
src/ocrd_olahd_client/: __init__.py  cli.py  ocrd-tool.json
tests/: test_client.py
